<resources>
    <string name="app_name">MindSharpener</string>
    <string name="textview1">Instructions:</string>
    <string name="textview2">This is a simple mathematic games which is believed\ncan train your brain. Two number are given randomly\nbased on your level choice together with the operator.\nYou just need to calculates the answer, write your\nanswer and press check button. Every correct answer\nwill give you 1 point while wrong answer will deduct 1\npoint.</string>
    <string name="textview3">Choose Level:</string>
    <string name="radiobutton1">i3</string>
    <string name="radiobutton2">i5</string>
    <string name="radiobutton3">i7</string>
    <string name="button">Check</string>
    <string name="textview7">POINT:</string>
    <string name="textview8">0</string>
    <string name="textview6">1</string>
    <string name="textView5">=</string>
    <string name="textView4">1</string>
</resources>