<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <?xml version="1.0" encoding="utf-8"?>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="218dp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="27dp"
        android:layout_height="33dp"
        android:text="@string/textView5"
        android:textSize="34dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="357dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview6"
        android:textSize="34dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="357dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView4"
        android:textSize="34dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="358dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="406dp"
        android:layout_height="52dp"
        android:text="@string/button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="583dp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview7"
        android:textColor="#7B1FA2"
        android:textSize="34dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="644dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview8"
        android:textColor="#D32F2F"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="644dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="412dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="text"
        android:text="type answer here"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="503dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="254dp"
        android:layout_height="68dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="248dp">

        <LinearLayout

            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton1"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton2"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton3"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>